[package]
name = "sysdep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[profile.release]
lto = true
strip = true